# qsv-sniffer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: sniff_gdp.rs  worldbank.rs
src/: chain.rs  error.rs  field_type.rs  infer_type.rs  lib.rs  metadata.rs  sample.rs  sniffer.rs  snip.rs
tests/: delimiter.rs  utf8test.rs
tests/data/: 2016_presidential_election_durham.csv  README.md  boston311.csv  dmy-test.csv  gdp_nocomma.csv  gotriangle-routes-cary-ch-duke-durham-raleigh-wofline.csv  library-visitors-boolean.csv  library-visitors.csv
