[package]
authors = ["Jamie Blondin <jblondin@gmail.com>", "Joel Natividad <joel@datHere.com>"]
categories = ["parser-implementations"]
description = "A CSV file format sniffer for Rust, optimized for qsv"
edition = "2021"
exclude = ["tests/data/*"]
keywords = ["csv"]
license = "MIT"
name = "qsv-sniffer"
repository = "https://github.com/jqnatividad/qsv-sniffer"
version = "0.9.2"

[features]
cli = []
default = ["cli"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]

[[bin]]
name = "sniff"
required-features = ["cli"]

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
strip         = true

[dependencies]
bitflags = "2.3"
bytecount = "0.6"
csv = "1"
csv-core = "0.1"
hashbrown = "0.13"
memchr = "2"
qsv-dateparser = "0.8"
regex = "1"
tabwriter = "1.2"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
simdutf8 = "0.1"

# use SIMD on aarch64 (Apple Silicon, Raspberry Pi 4, etc.)
[target.'cfg(target_arch = "aarch64")'.dependencies]
simdutf8 = { version = "0.1", features = ["aarch64_neon"] }
